--- a/styles.css
+++ b/styles.css
@@ -1,80 +1,9 @@
 /* your beautiful css styling goes here! */
-body {
-  margin: 0;
-/*  margin-right: 0;*/
-}
-.gameBoard {
-  width: 100%;
-  height: 700;
-  background-image: url(space.jpg);
-  background-position: 0px 0px;
-  background-repeat: repeat-x;
-  background-size: 50% 100%;
-  /*-webkit-background-position: 0px 0px;
-  -webkit-background-repeat: repeat-x;*/
-  animation: animatedbackground 1s linear infinite;
-  -webkit-animation: animatedbackground 10s linear infinite;
-}
 
-@keyframes animatedbackground {
-  from { background-position: 0 0; }
-  to { background-position: 100% 0; }
-}
-
-@-webkit-keyframes animatedbackground {
-  from { background-position: 100% 0; }
-  to { background-position: 0 0; }
-}
-
-.scoreboard {
-  background-color: red;
-  width: 100%;
-  height: 50px;
-}
-
-.high {
-  margin-right: 200px;
-}
-
-.current {
-  margin-right: 200px;
-}
-
-.collisions {
-}
-.nav {
-  width: 200px;
-  float: left;
-  margin: 15px 20px 10px 20px;
-
-  /*display: inline-block;
-  padding-bottom: 5px;
-  text-align: center;
-  padding-right: 10px;
-  width: 100%;
-  list-style: none;
-  font-size: 20px;*/
-}
+/* Note: an asteroid image is included in this repo. 
+Feel free to use it if you like. */
 
 .enemies {
-  animation-duration: 2s;
-  animation-name: spin;
-  -webkit-animation-name: spin;
-  -webkit-animation-timing-function: linear;
-  -webkit-animation-iteration-count: infinite;
-  -webkit-animation-duration: 2s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-  -webkit-transform-origin-x: initial;
-  -webkit-transform-origin-y: initial;
-}
 
-@-webkit-keyframes spin {
-  from { -webkit-transform: rotate(0deg); }
-  to { -webkit-transform: rotate(360deg);}
-}
-
-@keyframes spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+	
 }
